--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -547,8 +547,8 @@
   
   .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+     padding-right: 15px; 
+    padding-left: 15px; 
     margin-right: auto;
     margin-left: auto;
   }
@@ -559,7 +559,7 @@
     }
   }
   
-  @media (min-width: 768px) { */
+  @media (min-width: 768px) {
     .container {
       max-width: 720px;
     }
