--- a/css/styles.css
+++ b/css/styles.css
@@ -68,3 +68,51 @@ body{
     justify-content:center;
     margin-left: 10px;
 }
+#ve{
+    position: absolute;
+    text-align: center;
+
+}
+#ver1{
+    position: relative;
+    overflow: hidden;
+}
+.row img:hover{
+    opacity: 0.5;
+    transition: 2s;
+}
+#nano{
+    background-image: url("../diane/3.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+   color: white; 
+}
+#one,#two,#three{
+    background-color: transparent;
+    color: white;
+    font-size: 17px;
+    
+   
+}
+/* #one{
+   
+    margin-left: 23%;
+    
+} 
+ #two{
+    
+    margin-left: 52%;
+} */
+#three{
+    width: 53%;
+    height: 250px;
+    /* margin-left: 300px; */
+    margin-top: 8px;
+    padding-bottom: 200px;
+}
+#one,#two{
+    width: 25%;
+    height: 50px;
+  
+}
